phone-api/overlay/prod/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phoneshin-api-deploy
  labels:
    app: phoneshin-api
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  revisionHistoryLimit: 2
  replicas: 2
  selector:
    matchLabels:
      app: phoneshin-api
  template:
    metadata:
      name: phoneshin-api
      labels:
        app: phoneshin-api
    spec:
      containers:
        - name: phoneshin-api
          image: 'registry-harbor.phoneshin.com/phoneshin/api:latest'
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "1000m"
              memory: "4Gi"
            limits:
              cpu: "1000m"
              memory: "8Gi"
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 8
            successThreshold: 1
            failureThreshold: 7
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
      restartPolicy: Always
      imagePullSecrets:
        - name: inner-harbor-registry
