phone-api/overlay/prod/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: phoneshin-api-vs
spec:
  hosts:
    - "api.phoneshin.com"
  gateways:
    - istio-system/istio-system-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: phoneshin-api-svc.phoneshin.svc.cluster.local
            port:
              number: 8080
